# wr-cli

./: .gitignore  ARCHITECTURE.md  CHANGELOG.md  CONTRIBUTING.md  README.md  pyproject.toml  requirements.txt  wr.yml
tests/: test_commands.py  test_config.py  test_main.py  test_main_module.py  test_setup_base.py  test_setup_runner.py  test_setup_steps.py  test_setup_utils.py  test_setup_utils_fixed.py  test_setup_utils_simple.py
wr_cli/: __init__.py  __main__.py  commands.py  config.py  main.py
wr_cli/setup/: __init__.py  runner.py  steps.py  utils.py
